[package]
name = "volta"
version = "1.1.0"
authors = ["David Herman <david.herman@gmail.com>", "Charles Pierce <cpierce.grad@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/volta-cli/volta"
edition = "2018"

[features]
cross-platform-docs = ["volta-core/cross-platform-docs"]
mock-network = ["mockito", "volta-core/mock-network"]
volta-dev = []
smoke-tests = []

[[bin]]
name = "volta-shim"
path = "src/volta-shim.rs"

[[bin]]
name = "volta-migrate"
path = "src/volta-migrate.rs"

[dependencies]
atty = "0.2"
volta-core = { path = "crates/volta-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
lazy_static = "1.3.0"
log = { version = "0.4", features = ["std"] }
semver = { git = "https://github.com/mikrostew/semver", branch = "new-parser" }
structopt = "0.2.14"
cfg-if = "1.0"
mockito = { version = "0.31.0", optional = true }
test-support = { path = "crates/test-support" }
textwrap = "0.16.0"
which = "4.3.0"
dirs = "4.0.0"
volta-migrate = { path = "crates/volta-migrate" }

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[dev-dependencies]
hamcrest2 = "0.3.0"
envoy = "0.1.3"
ci_info = "0.14.7"
hyperx = "1.4.0"

[workspace]
