[package]
name = "volta"
version = "2.0.1"
authors = ["David Herman <david.herman@gmail.com>", "Charles Pierce <cpierce.grad@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/volta-cli/volta"
edition = "2018"

[features]
cross-platform-docs = ["volta-core/cross-platform-docs"]
mock-network = ["mockito", "volta-core/mock-network"]
volta-dev = []
smoke-tests = []

[[bin]]
name = "volta-shim"
path = "src/volta-shim.rs"

[[bin]]
name = "volta-migrate"
path = "src/volta-migrate.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
volta-core = { path = "crates/volta-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
once_cell = "1.19.0"
log = { version = "0.4", features = ["std"] }
node-semver = "2"
clap = { version = "4.5.16", features = ["color", "derive", "wrap_help"] }
clap_complete = "4.5.16"
mockito = { version = "0.31.1", optional = true }
textwrap = "0.16.1"
which = "6.0.2"
dirs = "5.0.1"
volta-migrate = { path = "crates/volta-migrate" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[dev-dependencies]
hamcrest2 = "0.3.0"
envoy = "0.1.3"
ci_info = "0.14.14"
headers = "0.4"
cfg-if = "1.0"
test-support = { path = "crates/test-support" }

[workspace]
