[package]
name = "archive"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2018"

[dependencies]
flate2 = "1.0"
tar = "0.4.13"
zip_rs = { version = "0.2.6", package = "zip" }
tee = "0.1.0"
fs-utils = { path = "../fs-utils" }
progress-read = { path = "../progress-read" }
verbatim = "0.1"
cfg-if = "1.0"
hyperx = "1.0.0"
thiserror = "1.0.16"
attohttpc = { version = "0.22.0", features = ["json"] }
