[package]
name = "archive"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2018"

[dependencies]
flate2 = "1.0"
tar = "0.4.13"
# Set features manually to drop usage of `time` crate: we do not rely on that
# set of capabilities, and it has a vulnerability. NOTE: this should be updated
# to include the `aes-crypto` and `zstd` features when upgrading to v0.6+.
zip_rs = { version = "0.5", package = "zip", default-features = false, features = ["deflate", "bzip2"] }
tee = "0.1.0"
fs-utils = { path = "../fs-utils" }
progress-read = { path = "../progress-read" }
verbatim = "0.1"
cfg-if = "1.0"
headers = "0.4"
thiserror = "1.0.16"
attohttpc = { version = "0.28", default-features = false, features = ["json", "compress", "tls-rustls-native-roots"] }
log = { version = "0.4", features = ["std"] }