[package]
name = "fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.23.1", default-features = false, features = ["json", "compress", "tls-rustls"] }
rustls-native-certs = "0.6.2"
rustls = "0.20.7"