[package]
name = "node-archive"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]

[dependencies]
flate2 = "1.0"
tar = "0.4.13"
zip = "0.2.6"
reqwest = "0.7.3"
tee = "0.1.0"
failure = "0.1.1"
failure_derive = "0.1.1"
progress-read = { path = "../progress-read" }

[target.'cfg(windows)'.dependencies]
verbatim = { path = "../verbatim" }
