[package]
name = "nodeup-core"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]

[dependencies]
toml = "0.4"
flate2 = "0.2.20"
reqwest = "0.7.3"
tar = "0.4.13"
term_size = "0.3.0"
indicatif = "0.7.0"
console = "0.5.0"

[target.'cfg(windows)'.dependencies]
winfolder = { path = "../winfolder" }
