[package]
name = "notion-core"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]

[features]
universal-docs = ["node-archive/universal-docs"]

[dependencies]
toml = "0.4"
term_size = "0.3.0"
indicatif = "0.9.0"
console = "0.6.1"
readext = "0.1.0"
serde_json = { version = "1.0.3", features = ["preserve_order"] }
serde = "1.0.27"
serde_derive = "1.0.27"
node-archive = { path = "../node-archive" }
failure = "0.1.1"
failure_derive = "0.1.1"
notion-fail = { path = "../notion-fail" }
notion-fail-derive = { path = "../notion-fail-derive" }
lazycell = { "git" = "https://github.com/dherman/lazycell", "branch" = "borrow_mut_with" }
semver = "0.9.0"
cmdline_words_parser = "0.0.2"
reqwest = "0.8.5"
cfg-if = "0.1"
winfolder = "0.1"
tempfile = "3.0.2"
os_info = "0.7.0"
detect-indent = { "git" = "https://github.com/stefanpenner/detect-indent-rs", "branch" = "master" }
