[package]
name = "notion-core"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2018"

[features]
universal-docs = ["archive/universal-docs"]
mock-network = ["mockito"]

[dependencies]
toml = "0.4"
term_size = "0.3.0"
indicatif = "0.9.0"
console = "0.6.1"
readext = "0.1.0"
serde_json = { version = "1.0.37", features = ["preserve_order"] }
serde = { version = "1.0.85", features = ["derive"] }
archive = { path = "../archive" }
failure = "0.1.1"
failure_derive = "0.1.1"
notion-fail = { path = "../notion-fail" }
notion-fail-derive = { path = "../notion-fail-derive" }
lazycell = "1.2.0"
semver = { git = "https://github.com/mikrostew/semver", branch = "new-parser" }
cmdline_words_parser = "0.0.2"
reqwest = { version = "0.9.9", features = ["hyper-011"] }
headers-011 = { path = "../headers-011" }
cfg-if = "0.1"
winfolder = "0.1"
tempfile = "3.0.2"
os_info = "1.1.0"
detect-indent = { git = "https://github.com/stefanpenner/detect-indent-rs", branch = "master" }
envoy = "0.1.3"
mockito = { version = "0.14.0", optional = true }
regex = "1.0.6"
dirs = "1.0.4"
sha-1 = "0.8.1"
hex = "0.3.2"
