[package]
name = "test-support"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2018"

[features]
universal-docs = ["archive/universal-docs"]

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
hamcrest2 = "0.2.3"
archive = { path = "../archive" }
notion-fail = { path = "../notion-fail" }
notion-fail-derive = { path = "../notion-fail-derive" }
serde_json = { version = "1.0.37" }
