[package]
name = "test-support"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
hamcrest2 = "0.3.0"
archive = { path = "../archive" }
volta-fail = { path = "../volta-fail" }
volta-fail-derive = { path = "../volta-fail-derive" }
serde_json = { version = "1.0.37" }
