[package]
name = "volta-core"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2018"

[features]
mock-network = ["mockito"]
# The `cross-platform-docs` feature flag is used for generating API docs for
# multiple platforms in one build.
# See ci/publish-docs.yml for an example of how it's enabled.
# See volta-core::path for an example of where it's used.
cross-platform-docs = []

[dependencies]
term_size = "0.3.2"
indicatif = "0.16.2"
console = ">=0.11.3, <1.0.0"
readext = "0.1.0"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde = { version = "1.0.137", features = ["derive"] }
archive = { path = "../archive" }
lazycell = "1.3.0"
lazy_static = "1.3.0"
semver = { git = "https://github.com/mikrostew/semver", branch = "new-parser" }
cmdline_words_parser = "0.2.1"
fs-utils = { path = "../fs-utils" }
cfg-if = "1.0"
winfolder = "0.1"
tempfile = "3.3.0"
os_info = "3.4.0"
detect-indent = { git = "https://github.com/stefanpenner/detect-indent-rs", branch = "master" }
envoy = "0.1.3"
mockito = { version = "0.31.0", optional = true }
regex = "1.6.0"
dirs = "4.0.0"
sha-1 = "0.10.0"
hex = "0.4.3"
chrono = "0.4.19"
validate-npm-package-name = { path = "../validate-npm-package-name" }
textwrap = "0.14.2"
atty = "0.2"
log = { version = "0.4", features = ["std"] }
ctrlc = "3.2.2"
walkdir = "2.3.2"
volta-layout = { path = "../volta-layout" }
double-checked-cell = "2.1.0"
dunce = "1.0.2"
ci_info = "0.14.5"
hyperx = "1.4.0"
attohttpc = { version = "0.19.1", features = ["json"] }
chain-map = "0.1.0"
indexmap = "1.9.1"
retry = "1.3.1"
fs2 = "0.4.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
