[package]
name = "volta-core"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2018"

[features]
mock-network = ["mockito"]
# The `cross-platform-docs` feature flag is used for generating API docs for
# multiple platforms in one build.
# See ci/publish-docs.yml for an example of how it's enabled.
# See volta-core::path for an example of where it's used.
cross-platform-docs = []

[dependencies]
term_size = "0.3.2"
indicatif = "0.17.2"
console = ">=0.11.3, <1.0.0"
readext = "0.1.0"
serde_json = { version = "1.0.89", features = ["preserve_order"] }
serde = { version = "1.0.147", features = ["derive"] }
archive = { path = "../archive" }
lazycell = "1.3.0"
lazy_static = "1.3.0"
semver = { git = "https://github.com/mikrostew/semver", branch = "new-parser" }
cmdline_words_parser = "0.2.1"
fs-utils = { path = "../fs-utils" }
cfg-if = "1.0"
tempfile = "3.3.0"
os_info = "3.5.1"
detect-indent = { git = "https://github.com/stefanpenner/detect-indent-rs", branch = "master" }
envoy = "0.1.3"
mockito = { version = "0.31.0", optional = true }
regex = "1.7.0"
dirs = "4.0.0"
chrono = "0.4.23"
validate-npm-package-name = { path = "../validate-npm-package-name" }
textwrap = "0.16.0"
atty = "0.2"
log = { version = "0.4", features = ["std"] }
ctrlc = "3.2.4"
walkdir = "2.3.2"
volta-layout = { path = "../volta-layout" }
once_cell = "1.16.0"
dunce = "1.0.3"
ci_info = "0.14.9"
hyperx = "1.4.0"
attohttpc = { version = "0.24", default-features = false, features = ["json", "compress", "tls-rustls-native-roots"] }
chain-map = "0.1.0"
indexmap = "1.9.2"
retry = "2"
fs2 = "0.4.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
