[package]
name = "volta-core"
version = "0.1.0"
authors = ["David Herman <david.herman@gmail.com>"]
edition = "2018"

[features]
mock-network = ["mockito"]
# The `cross-platform-docs` feature flag is used for generating API docs for
# multiple platforms in one build.
# See ci/publish-docs.yml for an example of how it's enabled.
# See volta-core::path for an example of where it's used.
cross-platform-docs = []

[dependencies]
terminal_size = "0.3.0"
indicatif = "0.17.8"
console = ">=0.11.3, <1.0.0"
readext = "0.1.0"
serde_json = { version = "1.0.121", features = ["preserve_order"] }
serde = { version = "1.0.204", features = ["derive"] }
archive = { path = "../archive" }
node-semver = "2"
cmdline_words_parser = "0.2.1"
fs-utils = { path = "../fs-utils" }
cfg-if = "1.0"
tempfile = "3.10.1"
os_info = "3.8.2"
detect-indent = "0.1"
envoy = "0.1.3"
mockito = { version = "0.31.1", optional = true }
regex = "1.7.3"
dirs = "5.0.1"
# We manually configure the feature list here because 0.4.16 includes the
# `oldtime` feature by default to avoid a breaking change. Additionally, using
# the feature list explicitly lets us drop the `wasmbind` feature, which we do
# not need.
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "std", "clock"] }
validate-npm-package-name = { path = "../validate-npm-package-name" }
textwrap = "0.16.1"
log = { version = "0.4", features = ["std"] }
ctrlc = "3.4.4"
walkdir = "2.5.0"
volta-layout = { path = "../volta-layout" }
once_cell = "1.19.0"
dunce = "1.0.4"
ci_info = "0.14.14"
httpdate = "1"
headers = "0.4"
attohttpc = { version = "0.28", default-features = false, features = ["json", "compress", "tls-rustls-native-roots"] }
chain-map = "0.1.0"
indexmap = "2.2.6"
retry = "2"
fs2 = "0.4.3"
which = "6.0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
junction = "1.1.0"